modified:   html/ezegycss.css 	modified:   html/index.html

--- a/html/index.html
+++ b/html/index.html
@@ -35,6 +35,20 @@
     </tbody>
 
 
+    <div class="user-card">
+        <h2>Jani</h2>
+        <p>City: Debrecen</p>
+    </div>
+    <div class="user-card active">
+        <h2>Pisti</h2>
+        <p>City: Debrecen</p>
+    </div>
+    <div class="user-card">
+        <h2>Valami random ember</h2>
+        <p>Valami random lakcim</p>
+    </div>
+
+
 
 
 
