--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="ezegycss.css" type="text/css">
 </head>
 <body>
+    <h1>JAVASICP</h1>
+    <script type="module" src="main.js"></script>
     <h1> Jani miért? </h1>
     <h2> Thevr Pisti </h2>
 
